[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/engine",
    "crates/flow",
    # "crates/storage",
    # "crates/plugin-sdk",
    # "crates/plugin-wasm-sdk",
    # "crates/runner",

    #"examples/*"
]

exclude = []

# Shared workspace settings
[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ryvus Team <support@ryvus.dev>"]
repository = "https://github.com/yourorg/ryvus"

[workspace.dependencies]
ryvus-engine = {path = "crates/engine"}
ryvus-core = {path = "crates/core"}
ryvus-flow = {path = "crates/flow"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"

# Useful shared testing tools
rstest = "0.18"

