[workspace]
resolver = "2"

members = [
  "crates/core",
  "crates/engine",
  "crates/flow",
  "crates/utils",

  "crates/ryvus",
]

exclude = []

# Shared workspace settings
[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ryvus Team <support@ryvus.dev>"]
repository = "https://github.com/ryvus/ryvus"

[workspace.dependencies]
ryvus-engine = { path = "crates/engine" }
ryvus-core = { path = "crates/core" }
ryvus-flow = { path = "crates/flow" }
ryvus-utils = { path = "crates/utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Useful shared testing tools
rstest = "0.18"
