[package]
name = "ryvus-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ryvus-core = { workspace = true }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
async-trait = "0.1"
thiserror = "1.0"
serde_json = "1.0"
jsonpath-rust = "1.0.4"

chrono = { version = "0.4", features = ["serde"] }
