[package]
name = "ryvus-flow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ryvus Flow — orchestration & persistence layer for ryvus-engine"
repository = "https://example.com/ryvus-flow"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
jsonpath-rust = "1.0.4"

ryvus-engine = { workspace = true }
ryvus-core = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
